<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_reconn_dlg_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card_account_id_text"
            android:textSize="@dimen/text18"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/reconn_dlg_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:textSize="@dimen/text18"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_reconn_dlg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_text"/>

        <TextView
            android:id="@+id/reconn_dlg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_reconn_dlg_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_text"/>

        <TextView
            android:id="@+id/reconn_dlg_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_reconn_dlg_prev_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev_read_disconnection_text"/>

        <TextView
            android:id="@+id/reconn_dlg_prev_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reconn_current_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_current_reading"
            android:inputType="number"
            android:textSize="@dimen/text18"
            android:textStyle="bold"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/dialog_buttons_layout" />

</LinearLayout>