<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/disconn_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp2"
    android:layout_marginEnd="@dimen/dp4"
    android:layout_marginStart="@dimen/dp4"
    android:layout_marginTop="@dimen/dp2"
    android:elevation="4dp"
    android:foreground="?android:selectableItemBackground"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp4"
            android:layout_marginEnd="@dimen/dp4"
            android:layout_marginTop="@dimen/dp2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_disconn_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/text17"
                android:text="@string/card_account_id_text"/>

            <TextView
                android:id="@+id/disconnection_account_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:textStyle="bold"
                android:textSize="@dimen/text17"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp4"
            android:layout_marginEnd="@dimen/dp4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_disconn_arrears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_arrears_text"/>

            <TextView
                android:id="@+id/disconnection_arrears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp4"
            android:layout_marginEnd="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_disconn_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_dis_date_text"/>

            <TextView
                android:id="@+id/disconnection_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>